--- a/_posts/2024-04-20-GALGAME新手入门指南.md
+++ b/_posts/2024-04-20-GALGAME新手入门指南.md
@@ -19,7 +19,7 @@ tags:
 
 这篇文章是为了给旮旯新手入门而准备的，玩GAL会面临很多困难，这里我会带领新手解决游戏的问题。
 
-~~_**此文章为初版，于2024年10月13日更新，还有很多东西就先占个坑，敬请期待**_~~
+~~_**此文章为初版，于2024年10月26日更新，还有很多东西就先占个坑，敬请期待**_~~
 
 _**注：本文不提供任何fq教程及工具，都4202年了这点东西还是自己找去吧。**_
 
@@ -108,7 +108,7 @@ _(百度贴吧之类的就不列举了，自己找去)_
 
 17. <a href="https://alist-public.imoutoheaven.org/" target="_blank">YAAS</a>(大佬做的OD仓库，有终点汉化合集的整理)
 
-18. <a href="https://sakustar.top/" target="_blank">稻荷ACG</a>
+18. <a href="https://amoebi.com/" target="_blank">稻荷 • Galgame资源站</a>
 
 19. <a href="https://t-satoru.top/" target="_blank">小鳥遊暁の会员制餐厅</a>(一个GAL移植大佬，很多GAL的KR版或安卓版都是他移植的)
 
