更新 2024-04-20-GALGAME新手入门指南.md

--- a/_posts/2024-04-20-GALGAME新手入门指南.md
+++ b/_posts/2024-04-20-GALGAME新手入门指南.md
@@ -60,6 +60,8 @@ _由于2023年12月1日终点事件的发生，GAL的资源网站还是受到了
 
 但还是有人对终点的资源进行了整理，这里先放下<a href="https://pixeldrain.com/l/GFG2LfQx" target="_blank">这个</a>和<a href="https://05fx.022016.xyz/Galgame%E6%B1%89%E5%8C%96%E5%90%88%E9%9B%86" target="_blank">这个</a>(原帖链接：<a href="https://bbs.kfpromax.com/read.php?tid=1045570&sf=ef3" target="_blank">KF帖、<a href="https://www.erogame.space/article/hans/50199.html" target="_blank">浮士德帖</a>)
 
+终点站长在事件过去后又开了新站，链接是<a href="https://bbs.drdian.net/" target="_blank">这个</a>，但里面已经没有资源，只是个全年龄论坛，不复当年辉煌。
+
 _2024年4月20日补充：<a href="https://www.ai2moe.org/" target="_blank">御爱同盟</a>已经在24年4月份彻底倒下。_
 
 _2024年8月29日补充：<a href="https://rosmontis.com/" target="_blank">Rosmontis&迷迭香的博客</a>已经关站，其实6月份就没了，但我现在才发现真是抱歉。_
@@ -100,7 +102,7 @@ _(百度贴吧之类的就不列举了，自己找去)_
 
 13. <a href="https://www.mikocon.com/" target="_blank">Mikocon</a>(已墙，都是日文，不推荐萌新使用)
 
-14. <a href="https://www.yngal.com/" target="_blank">初音的青葱</a>(<a href="https://xygalgame.com/" target="_blank">这是发布页</a>)
+14. <a href="https://www.fufugal.com/" target="_blank">初音的青葱</a>(<a href="https://xygalgame.com/" target="_blank">这是发布页</a>)
 
 15. <a href="https://www.touchgal.io/" target="_blank">TouchGAL</a>(非常简单粗暴的网站，适合单纯想找游戏玩的萌新)
 
